# aiopvpc

./: .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: main.yml  run_tests.yml
aiopvpc/: __init__.py  cli.py  ha_helpers.py  parser.py  prices.py  pvpc_data.py  pvpc_tariff.py  utils.py
tests/: conftest.py  test_cli.py  test_ha_helpers.py  test_holiday_warmup.py  test_pvpc.py  test_pvpc_parsing.py  test_real_api_calls.py  test_tariff_attributes.py
